<resources>
    <string name="App_name" translatable="false">Playlist maker</string>
    <string name="Search">Поиск</string>
    <string name="Mediateka">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="message_to_support" translatable="false">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="subject_support" translatable="false">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="link_to_offer" translatable="false">"https://yandex.ru/legal/practicum_offer/"</string>

    <string name="name_of_the_track">Название трека</string>
    <string name="name_of_the_artist">Имя исполнителя</string>
    <string name="duration">Длительность</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connect_trouble">Проблемы со связью</string>
    <string name="no_internet_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="Album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="chosen_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="you_havent_been_created">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="your_media_is_empty">Ваша медиатека пуста</string>
    
    <string name="name_hint">Название*</string>
    <string name="description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="name_of_the_playlist">Имя плейлиста</string>
    <string name="number_of_the_tracks">Количество треков</string>
    <string name="track">трек</string>
    <string name="many_tracks">трека</string>
    <string name="very_very_many_tracks">треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="minute">минута</string>
    <string name="a_few_minutes">минуты</string>
    <string name="many_minutes">минут</string>

    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>

    <string name="sure_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="are_you_sure_to_delete_playlist">Вы уверены, что хотите удалить плейлист?</string>



</resources>