<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligth_blue"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingTop="10dp"
        android:paddingBottom="12dp"
        android:text="@string/App_name"
        android:textColor="@color/white"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/Search"
        android:textColor="@color/dark"
        android:textSize="22dp"
        app:cornerRadius="16dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="24dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/Mediateka"
        android:textColor="@color/dark"
        android:textSize="22dp"
        app:cornerRadius="16dp"
        app:icon="@drawable/Media"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="24dp"
        app:iconTint="@color/dark" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:backgroundTint="@color/white"
        android:text="@string/Settings"
        android:textSize="22dp"
        android:textColor="@color/dark"
        app:cornerRadius="16dp"
        app:icon="@drawable/Settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        android:layout_marginTop="16dp"/>

</LinearLayout>