<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/buttonSettingsBack"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/dark"
        android:textFontWeight="500"
        app:contentInsetStart="16dp"
        app:contentInsetStartWithNavigation="16dp"
        app:iconGravity="start"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/Settings" />

    <LinearLayout
            android:orientation="horizontal"
            style="@style/menuSettings">

            <TextView
                style="@style/menuSettings"
                android:text="@string/dark_theme"
                android:paddingHorizontal="0dp"
                android:layout_width="wrap_content"
                />

        <Switch
            android:id="@+id/theme_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

    <LinearLayout
        style="@style/menuSettings">
        <TextView
            style="@style/menuSettings"
            android:text="@string/share_app"
            android:paddingHorizontal="0dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/menuSettings"
            android:id="@+id/btnShareSettings"
            android:backgroundTint="#00FFFFFF"
            android:outlineSpotShadowColor="#00FFFFFF"
            android:paddingHorizontal="0dp"
            app:drawableEndCompat="@drawable/share_it"/>

    </LinearLayout>>


    <LinearLayout
        style="@style/menuSettings">
        <TextView
            style="@style/menuSettings"
            android:text="@string/write_to_support"
            android:paddingHorizontal="0dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/menuSettings"
            android:id="@+id/btnWriteToSupportSettings"
            android:backgroundTint="#00FFFFFF"
            android:outlineSpotShadowColor="#00FFFFFF"
            android:paddingHorizontal="0dp"
            app:drawableEndCompat="@drawable/call_the_support"/>

    </LinearLayout>>

    <LinearLayout
        style="@style/menuSettings">
        <TextView
            style="@style/menuSettings"
            android:text="@string/terms_of_use"
            android:paddingHorizontal="0dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/menuSettings"
            android:id="@+id/btnTermsOfUseSettings"
            android:backgroundTint="#00FFFFFF"
            android:outlineSpotShadowColor="#00FFFFFF"
            android:paddingHorizontal="0dp"
            app:drawableEndCompat="@drawable/vector"/>

    </LinearLayout>>

</LinearLayout>