<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/normal_padding_size"
    tools:context=".SearchActivity">

<!--    <com.facebook.shimmer.ShimmerFrameLayout-->
<!--        android:id="@+id/shimmer_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:duration="800"/>-->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/buttonSettingsBack"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/dark"
        android:textFontWeight="500"
        app:contentInsetStart="16dp"
        app:contentInsetStartWithNavigation="16dp"
        app:iconGravity="start"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/Search" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/searchInput"
            style="@style/inputSearch"
            android:background="@drawable/el_style"
            android:drawableStart="@drawable/search_light"
            android:hint="@string/Search"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageButton
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        tools:listitem="@layout/track_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/nothingFound"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:orientation="vertical"
        android:layout_marginTop="102dp"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/nothingFoundImg"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:theme="@style/nothingFoundImg"/>

        <TextView
            android:id="@+id/nothingFoundText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/menuSettings"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            android:gravity="center"
            android:text="@string/nothing_found"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverProblems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="102dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            style="@style/noInternet"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/menuSettings"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            android:gravity="center"
            android:text="@string/connect_trouble"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/menuSettings"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            android:gravity="center"
            android:text="@string/no_internet_description"/>
        
        <Button
            android:id="@+id/refreshButtonSearch"
            style="@style/buttonRefresh"
            android:text="@string/refresh"
            android:layout_marginTop="24dp"
            android:outlineSpotShadowColor="@color/transp"
            />

        
    </LinearLayout>




</LinearLayout>