<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        style="@style/playlistActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Base.Settings.Theme.PlaylistMaker"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/playerBackButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:theme="@style/menuSettings"
            app:contentInsetStartWithNavigation="16dp"
            app:iconGravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow" />

        <ImageView
            android:id="@+id/playlistCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@color/transp"
            android:scaleType="centerCrop"
            android:src="@drawable/trackplaceholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/rightBorder24"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/leftBorder24"
            app:layout_constraintTop_toTopOf="@+id/playerBackButton" />

        <TextView
            android:id="@+id/playerNameOfThePlaylist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@color/transp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/name_of_the_track"
            android:textFontWeight="700"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/rightBorder24"
            app:layout_constraintStart_toStartOf="@id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@+id/playlistCover" />

        <TextView
            android:id="@+id/playlistYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/transp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/year"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/rightBorder24"
            app:layout_constraintStart_toStartOf="@id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@+id/playerNameOfThePlaylist" />

        <LinearLayout
            android:id="@+id/durationNumberBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@+id/playlistYear">

            <TextView
                android:id="@+id/nameOfTheArtist"
                style="@style/playlistDurationNumberOfTheTracks"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/name_of_the_artist" />

            <ImageView
                style="@style/playlistDurationNumberOfTheTracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@drawable/point_dark" />

            <TextView
                android:id="@+id/durationOfTheTrack"
                style="@style/playlistDurationNumberOfTheTracks"
                android:layout_weight="0"
                android:text="@string/duration" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/playlistButtonShare"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/share_it"
            android:backgroundTint="@color/dark"
            app:layout_constraintStart_toStartOf="@id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@+id/durationNumberBlock" />

        <ImageButton
            android:id="@+id/playlistButtonDetails"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/light_mode_dark"
            android:backgroundTint="@color/dark"
            app:layout_constraintStart_toStartOf="@+id/leftBorder24"
            app:layout_constraintTop_toBottomOf="@+id/durationNumberBlock" />

        <View android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/playlists_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectan_r16_top"
            style="@style/bottom_sheet"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="240dp"
            android:gravity="center_horizontal"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <View
                android:layout_height="4dp"
                android:layout_width="50dp"
                android:background="@drawable/rect_stadium"
                android:backgroundTint="@color/lightGrey"
                android:layout_marginTop="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playlists"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_item" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>